<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFBFB"
    android:orientation="vertical"
    android:paddingBottom="60dp"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="59dp"
            android:layout_height="19dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="42dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/moscow"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="32dp"
            android:layout_height="24dp"

            android:layout_marginTop="42dp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="33dp"
            android:layout_height="29dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/qr_cod"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/bannerFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBanner3"
                android:layout_width="300dp"
                android:layout_height="112dp"
                android:layout_marginLeft="16dp"
                android:background="@drawable/drinks" />

            <TextView
                android:id="@+id/tvBanner1"
                android:layout_width="300dp"
                android:layout_height="112dp"
                android:layout_marginLeft="16dp"
                android:background="@drawable/kombo" />

            <TextView
                android:id="@+id/tvBanner2"
                android:layout_width="300dp"
                android:layout_height="112dp"
                android:layout_marginLeft="16dp"
                android:background="@drawable/new_pizza" />


        </LinearLayout>

    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#FBFBFB">

        <LinearLayout
            android:id="@+id/categoryFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCategoryPizza"
                style="@style/TvSelectedCategory"
                android:layout_width="88dp"
                android:layout_height="32dp"
                android:layout_marginLeft="16dp"
                android:text="@string/pizza" />

            <TextView
                android:id="@+id/tvCategoryCombo"
                style="@style/TvCategory"
                android:layout_width="88dp"
                android:layout_height="32dp"
                android:layout_marginLeft="8dp"
                android:text="@string/combo" />

            <TextView
                android:id="@+id/tvCategoryDessert"
                style="@style/TvCategory"
                android:layout_width="88dp"
                android:layout_height="32dp"
                android:layout_marginLeft="8dp"
                android:text="@string/deserts" />

            <TextView
                android:id="@+id/tvCategoryDrinks"
                style="@style/TvCategory"
                android:layout_width="88dp"
                android:layout_height="32dp"
                android:layout_marginLeft="8dp"
                android:text="@string/drinks" />

            <TextView
                android:id="@+id/tvCategoryActions"
                style="@style/TvCategory"
                android:layout_width="88dp"
                android:layout_height="32dp"
                android:layout_marginLeft="8dp"
                android:text="@string/actions" />


        </LinearLayout>


    </HorizontalScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:layout_marginTop="16dp">

        <View
            android:id="@+id/vLine1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#F3F5F9"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivPlatter"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/italian_platter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vLine1" />

        <TextView
            android:id="@+id/tvPizzaName1"
            style="@style/TvPizzaName"
            android:layout_width="127dp"
            android:layout_height="19dp"
            android:layout_marginTop="16dp"
            android:text="@string/italian_platter"
            app:layout_constraintStart_toStartOf="@+id/tvPizzaDescription1"
            app:layout_constraintTop_toBottomOf="@+id/vLine1" />

        <TextView
            android:id="@+id/tvPizzaDescription1"
            android:layout_width="171dp"
            android:layout_height="68dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/platter_description"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPizzaName1" />

        <TextView
            android:id="@+id/tvPrice1"
            android:layout_width="87dp"
            android:layout_height="32dp"
            android:background="@drawable/rectangle2"
            android:gravity="center"
            android:text="@string/platter_price"
            android:textColor="#FD3A69"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvPizzaDescription1" />

        <LinearLayout
            android:id="@+id/notesFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="parent">


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:layout_marginTop="16dp">

        <View
            android:id="@+id/vLine2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#F3F5F9"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivPepperoni"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/pepperoni"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vLine2" />

        <TextView
            android:id="@+id/tvPizzaName2"
            style="@style/TvPizzaName"
            android:layout_width="127dp"
            android:layout_height="19dp"
            android:layout_marginTop="16dp"
            android:text="@string/pepperoni"
            app:layout_constraintStart_toStartOf="@+id/tvPizzaDescription2"
            app:layout_constraintTop_toBottomOf="@+id/vLine2" />

        <TextView
            android:id="@+id/tvPizzaDescription2"
            android:layout_width="171dp"
            android:layout_height="68dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/pepperoni_description"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPizzaName2" />

        <TextView
            android:id="@+id/tvPrice2"
            android:layout_width="87dp"
            android:layout_height="32dp"
            android:background="@drawable/rectangle2"
            android:gravity="center"
            android:text="@string/platter_price"
            android:textColor="#FD3A69"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvPizzaDescription2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:layout_marginTop="16dp">

        <View
            android:id="@+id/vLine3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#F3F5F9"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivMeat"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/meat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vLine3" />

        <TextView
            android:id="@+id/tvPizzaName3"
            style="@style/TvPizzaName"
            android:layout_width="127dp"
            android:layout_height="19dp"
            android:layout_marginTop="16dp"
            android:text="@string/meat"
            app:layout_constraintStart_toStartOf="@+id/tvPizzaDescription3"
            app:layout_constraintTop_toBottomOf="@+id/vLine3" />

        <TextView
            android:id="@+id/tvPizzaDescription3"
            android:layout_width="171dp"
            android:layout_height="68dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/meat_description"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPizzaName3" />

        <TextView
            android:id="@+id/tvPrice3"
            android:layout_width="87dp"
            android:layout_height="32dp"
            android:background="@drawable/rectangle2"
            android:gravity="center"
            android:text="@string/platter_price"
            android:textColor="#FD3A69"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvPizzaDescription3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:layout_marginTop="16dp">

        <View
            android:id="@+id/vLine4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#F3F5F9"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivMeat1"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/meat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vLine4" />

        <TextView
            android:id="@+id/tvPizzaName4"
            style="@style/TvPizzaName"
            android:layout_width="127dp"
            android:layout_height="19dp"
            android:layout_marginTop="16dp"
            android:text="@string/meat"
            app:layout_constraintStart_toStartOf="@+id/tvPizzaDescription4"
            app:layout_constraintTop_toBottomOf="@+id/vLine4" />

        <TextView
            android:id="@+id/tvPizzaDescription4"
            android:layout_width="171dp"
            android:layout_height="68dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/meat_description"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPizzaName4" />

        <TextView
            android:id="@+id/tvPrice4"
            android:layout_width="87dp"
            android:layout_height="32dp"
            android:background="@drawable/rectangle2"
            android:gravity="center"
            android:text="@string/platter_price"
            android:textColor="#FD3A69"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvPizzaDescription4" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>